完成后端代码沙箱的架构和判题服务的开发

--- a/oj-backend/src/main/resources/application.yml
+++ b/oj-backend/src/main/resources/application.yml
@@ -98,3 +98,6 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.lfy.oj.controller
+# 代码沙箱配置
+codesandbox:
+  type: example
