--- a/oj-frontend/package.json
+++ b/oj-frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "moment": "^2.30.1",
     "monaco-editor": "^0.50.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "vue": "^3.2.13",
